홈화면 수정2

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>NETFLIX 2077 | Cyberpunk Edition</title>
+    <title>netclone | yeon_PB_25</title>
 
     <meta property="og:type" content="website" />
     
